Fix: contrast on close button of 'Resultados'

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -907,6 +907,10 @@ td
     @each $category, $color in $categories
       .#{$category} &
         color: $color
+
+    .contraste &
+      color: #fff
+      
   .updated-at
     @extend .vote-result
     margin-top: $gutter
